[project]
name = "alert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arq>=0.25.0",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "redis>=8.0.0",
    "sqlmodel>=0.0.38",
]
